--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,8 +6,7 @@ Authors@R:
            comment = c(ORCID = "YOUR-ORCID-ID"))
 Description: Functions to facilitate working with multi-dimensional signals. 
     Includes operations, comparing, smoothing, aligning, and classifying functions.
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
