new smoothing function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(classifySignals)
 export(classifySignals_highVar)
 export(compareSignals)
 export(compareSignals_highVar)
+export(movingAverage)
 importFrom(dplyr,pull)
 importFrom(dplyr,relocate)
 importFrom(dtw,dtw)
